--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: Rubyist, Writer, All Around Coder and Tech Geek
+description: "Personal Webaite of M.T Davis"
+tags:
 comments: false
 image:
-  feature: abstract-1.jpg
+  feature: background.jpg
   credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  creditlink: http://www.dargadgetz.com/three-beautiful-landscape-wallpapers-from-firewatch/
 ---
 
 {% for post in paginator.posts %}
