--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,11 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+<!--Animate.css -->
+<link rel="stylesheet" href="css/animate.css" type="text/css" />
+<!-- Hover css -->
+<link href="css/hover.css" rel="stylesheet" media="all">
+<!-- main site css -->
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 
 <div class="container">
@@ -28,8 +33,8 @@
 <div class="header">
 <h1 class="animated fadeInLeft">Marquese T. Davis<i class="fa fa-code" aria-hidden="true"></i>Front-End Developer</h1>
 </div>
-    <div class="social-media animated bounce">
-    <span><i class="fa fa-github" aria-hidden="true"></i></span>
-    <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
-    <span><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
+    <div class="social-media animated fadeIn">
+    <span><i class="fa fa-github hvr-bounce-in" aria-hidden="true"></i></span>
+    <span><i class="fa fa-twitter hvr-bounce-in" aria-hidden="true"></i></span>
+    <span><i class="fa fa-linkedin-square hvr-bounce-in" aria-hidden="true"></i></span>
 </div>
