--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,13 +15,13 @@
 <div class="topnav">
     <div class="main-menu">
          <ul class="menu-item">
-            <a href="https://blog.mtdavis.info/">Contact</a>
+            <a href="#">Contact</a>
         </ul>
         <ul class="menu-item">
-            <a href="#">Blog</a>
+            <a href="https://blog.mtdavis.info/">Blog</a>
         </ul>
         <ul class="menu-item">
-            <a href="https://blog.mtdavis.info/">Work</a>
+            <a href="#">Work</a>
         </ul>
         <div class="site-logo" style="display: block">
             <a href= "#">MD</a>
