added pictures to Udacity portfolio and hover.css

--- a/udacity/portfolio/index.html
+++ b/udacity/portfolio/index.html
@@ -22,6 +22,8 @@
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:300,400,300italic,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Hover css -->
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <link rel="stylesheet" media="screen and (min-width:500px)" href="css/over500.css">
     <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -34,9 +36,9 @@
       <div class="col-md-6 text-right text-uppercase">
         <h1 class=" title-super text-thin">Marquese T. Davis</h1>
         <h3>Front-End Developer</h3>
-        <span class="fa fa-github-square fa-2x social-media" aria-hidden="true"></span>
-        <span class="fa fa-linkedin-square fa-2x social-media" aria-hidden="true"></span>
-        <span class="fa fa-twitter-square fa-2x social-media" aria-hidden="true"></span>
+        <span class="fa fa-github-square fa-2x social-media hvr-bounce-in" aria-hidden="true"></span>
+        <span class="fa fa-linkedin-square fa-2x social-media hvr-bounce-in" aria-hidden="true"></span>
+        <span class="fa fa-twitter-square fa-2x social-media hvr-bounce-in" aria-hidden="true"></span>
       </div>
     </div>
 
@@ -62,26 +64,31 @@
         <img class ="img-responsive" src="images/project-1.jpg" width="350" height="250" data-toggle="modal" data-target="#project1">
         <h3>Yelp Demo App using Rails</h3>
         <span>
-        <a href="https://github.com/mt-davis/yelpdemo"><i class="fa fa-github fa-2x social-media" aria-hidden="true"></i></a>
+        <a href="https://github.com/mt-davis/yelpdemo"><i class="fa fa-github fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
         </span>
         <span>
-        <a href="http://yelpdemo-md.herokuapp.com"><i class="fa fa-globe fa-2x" aria-hidden="true"></i></a>
+        <a href="http://yelpdemo-md.herokuapp.com"><i class="fa fa-globe fa-2x hvr-bounce-in" aria-hidden="true"></i></a>
         </span>
       </div>
       <div class="col-md-4">
-        <img class ="img-responsive" src="images/project-2-350-250.jpg"" data-toggle="modal" data-target="#project2">
+        <img class ="img-responsive" src="images/project-2-350-250.jpg" data-toggle="modal" data-target="#project2">
         <h3>Simple HTML Photo Site</h3>
         <span>
-        <a href="https://github.com/mt-davis/photo-demo"><i class="fa fa-github fa-2x social-media" aria-hidden="true"></i></a>
+        <a href="https://github.com/mt-davis/photo-demo"><i class="fa fa-github fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
         </span>
         <span>
-        <a href="https://s3.amazonaws.com/gamma-sample/index.html"><i class="fa fa-globe fa-2x social-media" aria-hidden="true"></i></a>
+        <a href="https://s3.amazonaws.com/gamma-sample/index.html"><i class="fa fa-globe fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
         </span>
       </div>
       <div class="col-md-4">
-        <img class ="img-responsive" src="http://placehold.it/350x250" data-toggle="modal" data-target="#project3">
-        <h3>Appify</h3>
-        <p><a href="http://github.com"><i class="fa fa-github fa-2x" aria-hidden="true"></i> Link to project</a></p>
+        <img class ="img-responsive" src="images/project-3-350-250.png" data-toggle="modal" data-target="#project3">
+        <h3>Rails Google Mapper</h3>
+        <span>
+        <a href="https://github.com/mt-davis/google-mapper"><i class="fa fa-github fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
+        </span>
+        <span>
+        <a href="http://google-mapper-md.herokuapp.com/"><i class="fa fa-globe fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
+        </span>
       </div>
     </div>
     </div>
@@ -109,11 +116,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Project Two</h4>
+                    <h4 class="modal-title" id="myModalLabel">Simple HTML Photo Site</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="http://placehold.it/555x300">
-                    This was my first project in this class. I learned a lot about HTML and CSS.
+                    <img class="img-responsive" src="images/project-2-555-300.png">
+                    Simple Photo site using Bootstrap and CSS
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -126,11 +133,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Project Three</h4>
+                    <h4 class="modal-title" id="myModalLabel">Google Maps API using Geolocation</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="http://placehold.it/555x300">
-                    One of my first Ruby on Rails App using bootstrap, Elasticsearch and AWS S3 for image storage.
+                    <img class="img-responsive" src="images/project-3-555-300.png">
+                    This is a Ruby on Rails App using Google Geolocation API to map users addresses.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
