--- a/udacity/portfolio/index.html
+++ b/udacity/portfolio/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,22 +11,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
+     <!-- Bootstrap css -->
+     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-
-      <!-- Optional theme -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-
-    <link href='https://fonts.googleapis.com/css?family=Titillium+Web:300,400,300italic,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- Hover css -->
-    <link href="css/hover.css" rel="stylesheet" media="all">
-    <link rel="stylesheet" media="screen and (min-width:500px)" href="css/over500.css">
+     <!-- Optional theme -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+     <!-- Google Fonts -->
+     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:300,400,300italic,600' rel='stylesheet' type='text/css'>
+     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200' rel='stylesheet' type='text/css'>
+     <!-- Custon CSS -->
+     <link rel="stylesheet" type="text/css" href="css/style.css">
+     <!-- Hover css -->
+     <link href="css/hover.css" rel="stylesheet" media="all">
+     <!--js script -->
     <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<title>Marquese T Davis</title>
+    <title>Marquese T Davis</title>
   </head>
   <div class="container">
     <div class="row">
