--- a/udacity/portfolio/index.html
+++ b/udacity/portfolio/index.html
@@ -15,7 +15,9 @@
      <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
      <!-- Optional theme -->
+     
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+     <!-- Font Awesome -->
      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
      <!-- Google Fonts -->
      <link href='https://fonts.googleapis.com/css?family=Titillium+Web:300,400,300italic,600' rel='stylesheet' type='text/css'>
