Update: Updated Udacity front-end project by adding animate.css

--- a/udacity/portfolio/index.html
+++ b/udacity/portfolio/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,25 +12,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-     <!-- Bootstrap css -->
-     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
-     <!-- Optional theme -->
-     
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-     <!-- Font Awesome -->
-     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-     <!-- Google Fonts -->
-     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:300,400,300italic,600' rel='stylesheet' type='text/css'>
-     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200' rel='stylesheet' type='text/css'>
-     <!-- Custon CSS -->
-     <link rel="stylesheet" type="text/css" href="css/style.css">
-     <!-- Hover css -->
-     <link href="css/hover.css" rel="stylesheet" media="all">
-     <!--js script -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+
+      <!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+
+    <link href='https://fonts.googleapis.com/css?family=Titillium+Web:300,400,300italic,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Hover css -->
+    <link href="css/hover.css" rel="stylesheet" media="all">
+    <link rel="stylesheet" href="css/animate.css" type="text/css" />
+    <link rel="stylesheet" media="screen and (min-width:500px)" href="css/over500.css">
     <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <title>Marquese T Davis</title>
+<title>Marquese T Davis</title>
   </head>
   <div class="container">
     <div class="row">
@@ -52,7 +51,8 @@
     
     <div class="row">
     <div class="col-md-12">
-      <img class ="img-responsive"src="http://placehold.it/1140x350">
+      <img class ="img-responsive" src="images/header.png" alt="Header Image">
+      <h2 class="imageheader animated fadeInUp">Udacity<br />Front-End Project</h2>
     </div>
     </div>
 
@@ -63,7 +63,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <img class ="img-responsive" src="images/project-1.jpg" width="350" height="250" data-toggle="modal" data-target="#project1">
+        <img class ="img-responsive" src="images/project-1.jpg" alt="Project 1" width="350" height="250" data-toggle="modal" data-target="#project1">
         <h3>Yelp Demo App using Rails</h3>
         <span>
         <a href="https://github.com/mt-davis/yelpdemo"><i class="fa fa-github fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
@@ -73,7 +73,7 @@
         </span>
       </div>
       <div class="col-md-4">
-        <img class ="img-responsive" src="images/project-2-350-250.jpg" data-toggle="modal" data-target="#project2">
+        <img class ="img-responsive" src="images/project-2-350-250.jpg" alt="Project 2" data-toggle="modal" data-target="#project2">
         <h3>Simple HTML Photo Site</h3>
         <span>
         <a href="https://github.com/mt-davis/photo-demo"><i class="fa fa-github fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
@@ -83,7 +83,7 @@
         </span>
       </div>
       <div class="col-md-4">
-        <img class ="img-responsive" src="images/project-3-350-250.png" data-toggle="modal" data-target="#project3">
+        <img class ="img-responsive" src="images/project-3-350-250.png" alt="Project 3" data-toggle="modal" data-target="#project3">
         <h3>Rails Google Mapper</h3>
         <span>
         <a href="https://github.com/mt-davis/google-mapper"><i class="fa fa-github fa-2x social-media hvr-bounce-in" aria-hidden="true"></i></a>
@@ -104,7 +104,7 @@
                     <h4 class="modal-title" id="myModalLabel">Ruby on Rails App using Bootstrap</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="images/project-1-555-300.jpg">
+                    <img class="img-responsive" src="images/project-1-555-300.jpg" alt="Project 1">
                     <p>One of my first Ruby on Rails App using bootstrap, Elasticsearch and AWS S3 for image storage. I also used the following gems figaro”, 'fog', 'carrierwave'and'searchkick'</p>
                 </div>
                 <div class="modal-footer">
@@ -121,7 +121,7 @@
                     <h4 class="modal-title" id="myModalLabel">Simple HTML Photo Site</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="images/project-2-555-300.png">
+                    <img class="img-responsive" src="images/project-2-555-300.png" alt="Project 2">
                     Simple Photo site using Bootstrap and CSS
                 </div>
                 <div class="modal-footer">
@@ -138,25 +138,8 @@
                     <h4 class="modal-title" id="myModalLabel">Google Maps API using Geolocation</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="images/project-3-555-300.png">
+                    <img class="img-responsive" src="images/project-3-555-300.png" alt="Project 3">
                     This is a Ruby on Rails App using Google Geolocation API to map users addresses.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-     <!-- Modal Project Four -->
-    <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Project Four</h4>
-                </div>
-                <div class="modal-body">
-                    <img class="img-responsive" src="http://placehold.it/555x300">
-                    This was my first project in this class. I learned a lot about HTML and CSS.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
